전개구문, this, 반복문까지 정리

--- a/html/eventHandle.html
+++ b/html/eventHandle.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>eventHandle</title>
 </head>
 <body>
-    <script src="../javaScript/01-variable.js" />
+    <button id="btn">Hello World!</button>
+
+    <script src="../js/05-this.js"/>
 </body>
 </html>
