DOM API, DOM 제어 정리

--- a/html/01-jsTest.html
+++ b/html/01-jsTest.html
@@ -10,6 +10,8 @@
     <!-- <script src="../js/02-dataType.js" /> -->
     <!-- <script src="../js/04-destructuring.js" /> -->
     <!-- <script src="../js/05-this.js" /> -->
-    <script src="../js/06-forIn-forOf.js" />
+    <!-- <script src="../js/06-forIn-forOf.js" /> -->
+    <!-- <script src="../js/07-map-set.js"/> -->
+    <script src="../js/08-json.js"/>
 </body>
 </html>
